--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,18 @@
-# H2
-spring.h2.console.path=/h2
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+
+##
+databaseHost=localhost
+databaseSchema=taco
+databaseUsername=root
+databasePassword=root
+databasePort=3306
+
+## Data Source Configuration
+spring.datasource.url=jdbc:mysql://${databaseHost}:${databasePort}/${databaseSchema}?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=${databaseUsername}
+spring.datasource.password= ${databasePassword}
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# flyway configuration
+spring.flyway.table=flyway_schema_version
+spring.flyway.baseline-version=0
+spring.flyway.baseline-on-migrate=true
