--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.datasource.url=jdbc:mysql://${databaseHost}:${databasePort}/${databaseSch
 spring.datasource.username=${databaseUsername}
 spring.datasource.password= ${databasePassword}
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=create
 
 # flyway configuration
 spring.flyway.table=flyway_schema_version
