--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.flyway.table=flyway_schema_version
 spring.flyway.baseline-version=0
 spring.flyway.baseline-on-migrate=true
+
+taco.orders.pageSize=20
