--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,11 @@ spring.flyway.table=flyway_schema_version
 spring.flyway.baseline-version=0
 spring.flyway.baseline-on-migrate=true
 
+spring.security.user.name=chintu
+spring.security.user.password=chintu
+
 taco.orders.pageSize=20
+
+spring.data.rest.base-path=/api
+
+spring.jms.template.default-destination=tacocloud.order.queue
