Finished working with queues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,8 @@ taco.orders.pageSize=20
 spring.data.rest.base-path=/api
 
 spring.jms.template.default-destination=tacocloud.order.queue
+spring.rabbitmq.template.exchange=tacocloud.orders
+spring.rabbitmq.template.routing-key=kitchens.central
+spring.rabbitmq.template.receive-timeout=30000
+
+spring.kafka.bootstrap-servers=kafka.tacocloud.com:9092
